# essence-iterator

./: Makefile  iterator.cabal  notes.txt
src/: Essence.hs  WordCount.hs
